--- a/src/style.css
+++ b/src/style.css
@@ -5,17 +5,10 @@
     font-family: 'Patrick Hand', cursive;
 }
 
-header {
-    font-size: 50px;
-    text-align: center;
-    margin: 30px;
-}
-
-footer {
-    text-align: center;
-}
-
-.continue {
-    color: red;
+.App {
+    display: flex;
+    align-content: center;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
