--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,6 +1,15 @@
 .home {
-    border: 2px solid lightgray;
-    padding: 50px;
     width: 100%;
     margin: 40px;
 }
+
+.home h1 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.home h2 {
+    font-size: 30px;
+    text-align: center;
+}
+
