--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,3 +1,7 @@
+h2 { 
+    background-color: transparent;
+}
+
 .home {
     width: 100%;
     margin: 40px;
@@ -13,6 +17,14 @@
     text-align: center;
 }
 
-.week {
-    background-color: bisque;
+.weekday {
+    
+}
+
+.weekday li {
+    list-style: none;
+}
+
+.card {
+    background-color: white;
 }
